close btn add wizard modal

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8666,205 +8666,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #53f360; }
+  background: #b50bfd; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7f51c6; }
+  background: #9c8b68; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ae9936; }
+  background: #626231; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #59eb88; }
+  background: #13b1b7; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f5f1ce; }
+  background: #92b6ec; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9225eb; }
+  background: #d8420f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #3cbfbf; }
+  background: #739f20; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #03d55f; }
+  background: #96bd34; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #650a55; }
+  background: #6e2e60; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #a36585; }
+  background: #50743f; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #680a0b; }
+  background: #e27746; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a35f40; }
+  background: #b74ed5; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f49fa2; }
+  background: #a60b14; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #07bbd1; }
+  background: #23679b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #5e09df; }
+  background: #d0a168; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f5a43a; }
+  background: #307a85; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #7e6cfe; }
+  background: #cd5fd8; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #4e1b7e; }
+  background: #2c94d3; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #1dea2b; }
+  background: #99bda2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #453b69; }
+  background: #a6ac2c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2b34aa; }
+  background: #a175e4; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #9a3984; }
+  background: #352e0c; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c079cd; }
+  background: #874274; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #1907ce; }
+  background: #ee1a16; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1948bb; }
+  background: #43d8fd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #6a7e41; }
+  background: #6ed583; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #769abf; }
+  background: #3eac5a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #94e725; }
+  background: #b3a12e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b94880; }
+  background: #f84773; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #2ec4bd; }
+  background: #427f41; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ded389; }
+  background: #4d0662; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #091f1b; }
+  background: #b5d92f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a56f58; }
+  background: #6b9836; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #c2b82a; }
+  background: #024f7f; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #934fc3; }
+  background: #763a20; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #74b83b; }
+  background: #5eba43; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #478fc2; }
+  background: #fabc59; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #549b11; }
+  background: #b13440; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #281864; }
+  background: #0f5259; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1c91b6; }
+  background: #e0b642; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e9756f; }
+  background: #28d4f7; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #19f889; }
+  background: #0bf0f9; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #183954; }
+  background: #e62ad0; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5dd3ec; }
+  background: #6be2eb; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c5f99e; }
+  background: #4f5c28; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f82fc6; }
+  background: #e12a58; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #e43f7c; }
+  background: #f80136; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ae47cf; }
+  background: #f8c34a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e3014b; }
+  background: #5b3eac; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #d6dcb7; }
+  background: #0f6255; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #41ddc3; }
+  background: #aad0f3; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2d53f0; }
+  background: #d1b869; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #406136; }
+  background: #92ee83; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f3efdd; }
+  background: #d9d0b3; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #2d4c20; }
+  background: #94784b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #080799; }
+  background: #189d6f; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #416f6a; }
+  background: #c0326e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #708e65; }
+  background: #2ae5de; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f8466d; }
+  background: #a7908a; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #7bde18; }
+  background: #d33147; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #9e0841; }
+  background: #dee689; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b2c23e; }
+  background: #9a5f05; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9a1031; }
+  background: #13bdfc; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #24a366; }
+  background: #58bb95; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #670a5b; }
+  background: #f8d626; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #424b6d; }
+  background: #45305d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #9ff690; }
+  background: #1c8a24; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #cf10eb; }
+  background: #d3034e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c4b263; }
+  background: #9835b8; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5d8cef; }
+  background: #21b5ab; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #44c128; }
+  background: #41cc91; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e33671; }
+  background: #c98622; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #bd91cb; }
+  background: #41863e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b6be37; }
+  background: #0e0dc0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #dd8e9c; }
+  background: #a23174; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f59707; }
+  background: #c95e82; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b018b9; }
+  background: #2ba762; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #eeaebf; }
+  background: #bff010; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1bcb79; }
+  background: #f2033c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #88e6e9; }
+  background: #de311e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c2b721; }
+  background: #2232ea; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #28d301; }
+  background: #4bd042; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ee878b; }
+  background: #dc5124; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #ccd287; }
+  background: #324aec; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d1a825; }
+  background: #9075b6; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #da1514; }
+  background: #e8cf3d; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #9b3b98; }
+  background: #f7e972; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5f97c9; }
+  background: #848ed9; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9a9537; }
+  background: #fa1f36; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ad19d0; }
+  background: #519781; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d6ef64; }
+  background: #0a2567; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #5c1d66; }
+  background: #671ab2; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #8169de; }
+  background: #79342e; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #7a29ca; }
+  background: #b8fd2e; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #53c2df; }
+  background: #bed1e7; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e99243; }
+  background: #4c70fd; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ae85b5; }
+  background: #aef662; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #439269; }
+  background: #20f6a9; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #07379a; }
+  background: #8b4187; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d8f281; }
+  background: #436826; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11590,6 +11590,12 @@ input:checked + .sliders:before {
 
 .query-wizard-exp-contents .query-wizard-expension {
   position: relative; }
+  .query-wizard-exp-contents .query-wizard-expension .full-panel-close-btn {
+    position: absolute;
+    top: -8px;
+    right: -18px; }
+    .query-wizard-exp-contents .query-wizard-expension .full-panel-close-btn img {
+      width: 13px; }
   .query-wizard-exp-contents .query-wizard-expension .exists-dropdown {
     padding: 6px 10px !important; }
   .query-wizard-exp-contents .query-wizard-expension .medium-dropdown {
